--- a/docs/src/pages/index.module.css
+++ b/docs/src/pages/index.module.css
@@ -21,3 +21,20 @@
   align-items: center;
   justify-content: center;
 }
+
+.features {
+  display: flex;
+  align-items: center;
+  padding: 2rem 0;
+  width: 100%;
+}
+
+.featureImage {
+  height: 200px;
+  width: 200px;
+}
+
+.getStarted {
+  border-style: solid;
+  border-width: 1px;
+}
